--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "firebase": "^10.11.1",
     "ldrs": "^1.0.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
